src/g4/PIE4Parser.ts
// Generated from ./g4/PIE4.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { PIE4Listener } from "./PIE4Listener";
import { PIE4Visitor } from "./PIE4Visitor";


export class PIE4Parser extends Parser {
	public static readonly PIE_HEADER = 1;
	public static readonly TYPE_HEADER = 2;
	public static readonly INTERPOLATE_HEADER = 3;
	public static readonly TEXTURE_HEADER = 4;
	public static readonly TCMASK_HEADER = 5;
	public static readonly LEVELS_HEADER = 6;
	public static readonly LEVEL_HEADER = 7;
	public static readonly POINTS_HEADER = 8;
	public static readonly POLYGONS_HEADER = 9;
	public static readonly CONNECTORS_HEADER = 10;
	public static readonly ANIMOBJECT_HEADER = 11;
	public static readonly SCIENTIFIC = 12;
	public static readonly FLOAT = 13;
	public static readonly INTEGER = 14;
	public static readonly IDENTIFIER = 15;
	public static readonly STRING = 16;
	public static readonly NL = 17;
	public static readonly WS = 18;
	public static readonly LINE_COMMENT = 19;
	public static readonly COMMENT_TOKEN = 20;
	public static readonly RULE_pieFile = 0;
	public static readonly RULE_pieHeader = 1;
	public static readonly RULE_typeSection = 2;
	public static readonly RULE_interpolateSection = 3;
	public static readonly RULE_textureSection = 4;
	public static readonly RULE_tcmaskSection = 5;
	public static readonly RULE_levelsSection = 6;
	public static readonly RULE_levelSection = 7;
	public static readonly RULE_subLevelContent = 8;
	public static readonly RULE_pointsSection = 9;
	public static readonly RULE_pointCoordinate = 10;
	public static readonly RULE_polygonsSection = 11;
	public static readonly RULE_polygon = 12;
	public static readonly RULE_animObjectSection = 13;
	public static readonly RULE_animFrame = 14;
	public static readonly RULE_connectorSection = 15;
	public static readonly RULE_connector = 16;
	public static readonly RULE_number = 17;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"pieFile", "pieHeader", "typeSection", "interpolateSection", "textureSection", 
		"tcmaskSection", "levelsSection", "levelSection", "subLevelContent", "pointsSection", 
		"pointCoordinate", "polygonsSection", "polygon", "animObjectSection", 
		"animFrame", "connectorSection", "connector", "number",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "PIE_HEADER", "TYPE_HEADER", "INTERPOLATE_HEADER", "TEXTURE_HEADER", 
		"TCMASK_HEADER", "LEVELS_HEADER", "LEVEL_HEADER", "POINTS_HEADER", "POLYGONS_HEADER", 
		"CONNECTORS_HEADER", "ANIMOBJECT_HEADER", "SCIENTIFIC", "FLOAT", "INTEGER", 
		"IDENTIFIER", "STRING", "NL", "WS", "LINE_COMMENT", "COMMENT_TOKEN",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(PIE4Parser._LITERAL_NAMES, PIE4Parser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return PIE4Parser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "PIE4.g4"; }

	// @Override
	public get ruleNames(): string[] { return PIE4Parser.ruleNames; }

	// @Override
	public get serializedATN(): string { return PIE4Parser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(PIE4Parser._ATN, this);
	}
	// @RuleVersion(0)
	public pieFile(): PieFileContext {
		let _localctx: PieFileContext = new PieFileContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, PIE4Parser.RULE_pieFile);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 36;
			this.pieHeader();
			this.state = 38;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PIE4Parser.TYPE_HEADER) {
				{
				this.state = 37;
				this.typeSection();
				}
			}

			this.state = 41;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PIE4Parser.INTERPOLATE_HEADER) {
				{
				this.state = 40;
				this.interpolateSection();
				}
			}

			this.state = 46;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === PIE4Parser.TEXTURE_HEADER) {
				{
				{
				this.state = 43;
				this.textureSection();
				}
				}
				this.state = 48;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 52;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === PIE4Parser.TCMASK_HEADER) {
				{
				{
				this.state = 49;
				this.tcmaskSection();
				}
				}
				this.state = 54;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 55;
			this.levelsSection();
			this.state = 57;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PIE4Parser.CONNECTORS_HEADER) {
				{
				this.state = 56;
				this.connectorSection();
				}
			}

			this.state = 62;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === PIE4Parser.LEVEL_HEADER) {
				{
				{
				this.state = 59;
				this.levelSection();
				}
				}
				this.state = 64;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 65;
			this.match(PIE4Parser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public pieHeader(): PieHeaderContext {
		let _localctx: PieHeaderContext = new PieHeaderContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, PIE4Parser.RULE_pieHeader);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 67;
			this.match(PIE4Parser.PIE_HEADER);
			this.state = 68;
			this.match(PIE4Parser.NL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public typeSection(): TypeSectionContext {
		let _localctx: TypeSectionContext = new TypeSectionContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, PIE4Parser.RULE_typeSection);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 70;
			this.match(PIE4Parser.TYPE_HEADER);
			this.state = 71;
			this.number();
			this.state = 72;
			this.match(PIE4Parser.NL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public interpolateSection(): InterpolateSectionContext {
		let _localctx: InterpolateSectionContext = new InterpolateSectionContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, PIE4Parser.RULE_interpolateSection);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 74;
			this.match(PIE4Parser.INTERPOLATE_HEADER);
			this.state = 75;
			this.number();
			this.state = 76;
			this.match(PIE4Parser.NL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public textureSection(): TextureSectionContext {
		let _localctx: TextureSectionContext = new TextureSectionContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, PIE4Parser.RULE_textureSection);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 78;
			this.match(PIE4Parser.TEXTURE_HEADER);
			this.state = 79;
			this.number();
			this.state = 80;
			this.match(PIE4Parser.STRING);
			this.state = 84;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << PIE4Parser.SCIENTIFIC) | (1 << PIE4Parser.FLOAT) | (1 << PIE4Parser.INTEGER))) !== 0)) {
				{
				this.state = 81;
				this.number();
				this.state = 82;
				this.number();
				}
			}

			this.state = 86;
			this.match(PIE4Parser.NL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public tcmaskSection(): TcmaskSectionContext {
		let _localctx: TcmaskSectionContext = new TcmaskSectionContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, PIE4Parser.RULE_tcmaskSection);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 88;
			this.match(PIE4Parser.TCMASK_HEADER);
			this.state = 89;
			this.number();
			this.state = 90;
			this.match(PIE4Parser.STRING);
			this.state = 91;
			this.match(PIE4Parser.NL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public levelsSection(): LevelsSectionContext {
		let _localctx: LevelsSectionContext = new LevelsSectionContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, PIE4Parser.RULE_levelsSection);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 93;
			this.match(PIE4Parser.LEVELS_HEADER);
			this.state = 94;
			this.number();
			this.state = 95;
			this.match(PIE4Parser.NL);
			this.state = 96;
			this.levelSection();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public levelSection(): LevelSectionContext {
		let _localctx: LevelSectionContext = new LevelSectionContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, PIE4Parser.RULE_levelSection);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 98;
			this.match(PIE4Parser.LEVEL_HEADER);
			this.state = 104;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << PIE4Parser.SCIENTIFIC) | (1 << PIE4Parser.FLOAT) | (1 << PIE4Parser.INTEGER) | (1 << PIE4Parser.IDENTIFIER) | (1 << PIE4Parser.STRING))) !== 0)) {
				{
				this.state = 102;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case PIE4Parser.SCIENTIFIC:
				case PIE4Parser.FLOAT:
				case PIE4Parser.INTEGER:
					{
					this.state = 99;
					this.number();
					}
					break;
				case PIE4Parser.IDENTIFIER:
					{
					this.state = 100;
					this.match(PIE4Parser.IDENTIFIER);
					}
					break;
				case PIE4Parser.STRING:
					{
					this.state = 101;
					this.match(PIE4Parser.STRING);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 106;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 110;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === PIE4Parser.COMMENT_TOKEN) {
				{
				{
				this.state = 107;
				this.match(PIE4Parser.COMMENT_TOKEN);
				}
				}
				this.state = 112;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 113;
			this.match(PIE4Parser.NL);
			this.state = 114;
			this.subLevelContent();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public subLevelContent(): SubLevelContentContext {
		let _localctx: SubLevelContentContext = new SubLevelContentContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, PIE4Parser.RULE_subLevelContent);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 120;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === PIE4Parser.TYPE_HEADER || _la === PIE4Parser.TEXTURE_HEADER) {
				{
				this.state = 118;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case PIE4Parser.TYPE_HEADER:
					{
					this.state = 116;
					this.typeSection();
					}
					break;
				case PIE4Parser.TEXTURE_HEADER:
					{
					this.state = 117;
					this.textureSection();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 122;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 123;
			this.pointsSection();
			this.state = 124;
			this.polygonsSection();
			this.state = 131;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === PIE4Parser.ANIMOBJECT_HEADER) {
				{
				{
				this.state = 125;
				this.animObjectSection();
				this.state = 127;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === PIE4Parser.POLYGONS_HEADER) {
					{
					this.state = 126;
					this.polygonsSection();
					}
				}

				}
				}
				this.state = 133;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public pointsSection(): PointsSectionContext {
		let _localctx: PointsSectionContext = new PointsSectionContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, PIE4Parser.RULE_pointsSection);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 134;
			this.match(PIE4Parser.POINTS_HEADER);
			this.state = 135;
			this.number();
			this.state = 136;
			this.match(PIE4Parser.NL);
			this.state = 138;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 137;
				this.pointCoordinate();
				}
				}
				this.state = 140;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << PIE4Parser.SCIENTIFIC) | (1 << PIE4Parser.FLOAT) | (1 << PIE4Parser.INTEGER))) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public pointCoordinate(): PointCoordinateContext {
		let _localctx: PointCoordinateContext = new PointCoordinateContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, PIE4Parser.RULE_pointCoordinate);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 142;
			this.number();
			this.state = 143;
			this.number();
			this.state = 144;
			this.number();
			this.state = 145;
			this.match(PIE4Parser.NL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public polygonsSection(): PolygonsSectionContext {
		let _localctx: PolygonsSectionContext = new PolygonsSectionContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, PIE4Parser.RULE_polygonsSection);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 147;
			this.match(PIE4Parser.POLYGONS_HEADER);
			this.state = 148;
			this.number();
			this.state = 149;
			this.match(PIE4Parser.NL);
			this.state = 151;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 150;
				this.polygon();
				}
				}
				this.state = 153;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << PIE4Parser.SCIENTIFIC) | (1 << PIE4Parser.FLOAT) | (1 << PIE4Parser.INTEGER))) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public polygon(): PolygonContext {
		let _localctx: PolygonContext = new PolygonContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, PIE4Parser.RULE_polygon);
		let _la: number;
		try {
			this.state = 176;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 18, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 155;
				this.number();
				this.state = 156;
				this.number();
				this.state = 158;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 157;
					this.number();
					}
					}
					this.state = 160;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << PIE4Parser.SCIENTIFIC) | (1 << PIE4Parser.FLOAT) | (1 << PIE4Parser.INTEGER))) !== 0));
				this.state = 162;
				_la = this._input.LA(1);
				if (!(_la === PIE4Parser.EOF || _la === PIE4Parser.NL)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 164;
				this.number();
				this.state = 165;
				this.number();
				this.state = 166;
				this.number();
				this.state = 167;
				this.number();
				this.state = 168;
				this.number();
				this.state = 170;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 169;
					this.number();
					}
					}
					this.state = 172;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << PIE4Parser.SCIENTIFIC) | (1 << PIE4Parser.FLOAT) | (1 << PIE4Parser.INTEGER))) !== 0));
				this.state = 174;
				_la = this._input.LA(1);
				if (!(_la === PIE4Parser.EOF || _la === PIE4Parser.NL)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public animObjectSection(): AnimObjectSectionContext {
		let _localctx: AnimObjectSectionContext = new AnimObjectSectionContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, PIE4Parser.RULE_animObjectSection);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 178;
			this.match(PIE4Parser.ANIMOBJECT_HEADER);
			this.state = 179;
			this.number();
			this.state = 180;
			this.number();
			this.state = 181;
			this.number();
			this.state = 182;
			this.match(PIE4Parser.NL);
			this.state = 184;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 183;
				this.animFrame();
				}
				}
				this.state = 186;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << PIE4Parser.SCIENTIFIC) | (1 << PIE4Parser.FLOAT) | (1 << PIE4Parser.INTEGER))) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public animFrame(): AnimFrameContext {
		let _localctx: AnimFrameContext = new AnimFrameContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, PIE4Parser.RULE_animFrame);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 188;
			this.number();
			this.state = 189;
			this.number();
			this.state = 190;
			this.number();
			this.state = 191;
			this.number();
			this.state = 192;
			this.number();
			this.state = 193;
			this.number();
			this.state = 194;
			this.number();
			this.state = 195;
			this.number();
			this.state = 196;
			this.number();
			this.state = 197;
			this.number();
			this.state = 198;
			_la = this._input.LA(1);
			if (!(_la === PIE4Parser.EOF || _la === PIE4Parser.NL)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public connectorSection(): ConnectorSectionContext {
		let _localctx: ConnectorSectionContext = new ConnectorSectionContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, PIE4Parser.RULE_connectorSection);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 200;
			this.match(PIE4Parser.CONNECTORS_HEADER);
			this.state = 201;
			this.number();
			this.state = 202;
			this.match(PIE4Parser.NL);
			this.state = 204;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 203;
				this.connector();
				}
				}
				this.state = 206;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << PIE4Parser.SCIENTIFIC) | (1 << PIE4Parser.FLOAT) | (1 << PIE4Parser.INTEGER))) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public connector(): ConnectorContext {
		let _localctx: ConnectorContext = new ConnectorContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, PIE4Parser.RULE_connector);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 208;
			this.number();
			this.state = 209;
			this.number();
			this.state = 210;
			this.number();
			this.state = 211;
			_la = this._input.LA(1);
			if (!(_la === PIE4Parser.EOF || _la === PIE4Parser.NL)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public number(): NumberContext {
		let _localctx: NumberContext = new NumberContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, PIE4Parser.RULE_number);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 213;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << PIE4Parser.SCIENTIFIC) | (1 << PIE4Parser.FLOAT) | (1 << PIE4Parser.INTEGER))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!PIE4Parser.__ATN) {
			PIE4Parser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(PIE4Parser._serializedATN));
		}

		return PIE4Parser.__ATN;
	}

}
